--- a/index.css
+++ b/index.css
@@ -99,6 +99,24 @@ body {
   color: var(--dark-blue-300);
 }
 
+
+.card__content textarea{
+  border: none;
+  background: none;
+  outline: none;
+  padding: 0;
+  margin: 0;
+  font-family: inherit;
+  color: inherit;
+  resize: none;
+  height: 20rem;
+  box-sizing: border-box;
+  font-size: 1.5rem;
+  margin-top: 2rem;
+  color: var(--gray-400);
+}
+
+
 .text-input-container textarea::placeholder {
   color: var(--dark-blue-300);
   font-size: 2rem;
@@ -147,6 +165,15 @@ body {
   color: var(--dark-blue-300);
   font-size: 1rem;
   height: 4rem;
+}
+
+
+.text-info__action-decrypt:active{
+  background-color: #D8DFE8;
+}
+
+.text-info__action-copy:active{
+  background-color: #D8DFE8;
 }
 
 
@@ -203,6 +230,18 @@ footer {
   gap: 0.5rem;
 }
 
+#encrypted-message{
+  display: none;
+}
+
+#encrypted-message-desktop {
+  display: none;
+}
+
+.text-info__icon {
+  display: none;
+}
+
 @media (min-width: 768px) {
   .container {
     margin: 4.6rem 2.5rem 2.5rem 2.5rem; /* top right bottom left */
@@ -227,79 +266,63 @@ footer {
     width: 100%;
   }
 
+
+  .card__content textarea{
+    height: 10rem;
+  }
+
   .message-container{
     display: none;
   }
+
+  .text-info__icon {
+    display: none;
+  }
+
 }
 
 
-@media (min-width: 1140px) {
+@media (min-width: 1440px) {
+  
   .container {
+    display: flex;
+    gap: 5rem;
     margin: 2.5rem 2.5rem 2.5rem 8rem; /* top right bottom left */
-    display: flex;
-    justify-content: center;
-  }
+}
 
-  .header {
-    margin-bottom: 5rem;
-  }
 
-  .content-container{
-    display: flex;
-    align-items: center;
-  }
+.text-input-container textarea {
+  margin-top: 5rem;
+  height: 40rem;
+}
 
-  .text-input-container textarea {
-    height: 40rem;
-    width: 42.5rem;
-    margin-top: 8rem;
-    margin-left: 5rem;
-  }
+.text-info {
+  display: flex;
+  flex-direction: column;
+  width: 42.5rem;
+}
 
-  .text-info{
-    margin-left: 7rem;
-    margin-top: 1rem;
-  }
+.card {
+  margin-top: 0px;
+  height: 52rem;
+  width: 25rem;
+  display: flex;
+  align-items: center;
+}
 
-  .text-info__action-encrypt{
-    width: 20.5rem;
-  }
 
-  .text-info__action-decrypt{
-    width: 20.5rem;
-  }
+.text-info__icon {
+  display: inline;
+}
 
-  .card {
-    display: none;
-  }
+#encrypted-message{
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+}
+.card__content textarea {
+  height: 48rem;
+  width: 100%;
+}
 
-  .message-container{
-    display: flex;
-    background-color: white;
-    border-radius: 1rem;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    flex-direction: column;
-    height: 59rem;
-    width: 25rem;
-    margin-left: 5rem;
-    justify-content: center;
-    align-items: center;
-
-  }
-  
-  .message-container__text {
-    text-align: center;
-  }
-  
-  .card__title {
-    margin-bottom: 2rem; /* 32px en rem (suponiendo que 1rem = 16px) */
-    width: 21rem;
-  }
-  
-  .card_description {
-    margin-top: 2rem; /* 32px en rem (suponiendo que 1rem = 16px) */
-    width: 21rem;
-  }
-
-  
 }
